# FFmpegPlayer

./: .gitignore  CMakeLists.txt
Modules/: FindFFMPEG.cmake
src/: main.cpp
